--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-family: Arial, sans-serif;
 }
 
-/* NAVBAR */
+/* navbar */
 .navbar {
   position: sticky;
   top: 0;
@@ -15,14 +15,32 @@
   padding: 15px 30px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
+.nav-links{
+  display:flex;
+  align-items: center;
+  gap: 24px;
+  
+  
+}
 
 .nav-links a, .dropbtn {
-  margin: 0 10px;
-  text-decoration: none;
-  color: black;
-  background: none;
-  border: none;
+  
+
+   border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a00;
   cursor: pointer;
+  transition: border-color 0.25s;
+}
+.nav-links a:hover,
+.dropbtn:hover {
+ border-color: #646cff;
+ background-color: #2857c600;
+ 
 }
 
 .dropdown-content {
@@ -36,7 +54,7 @@
   display: block;
 }
 
-/* BUTTONS */
+/* buttons */
 .btn-primary {
   background: #ff7a00;
   color: white;
@@ -52,7 +70,7 @@
   border-radius: 8px;
 }
 
-/* HERO */
+/* hero */
 .hero {
   display: flex;
   padding: 60px;
@@ -62,19 +80,30 @@
 
 .hero img {
   width: 100%;
+  height: auto;
+
   border-radius: 20px;
 }
 
-/* TABS */
+/* tabs */
+.tabs-section {
+  padding: 60px;
+  text-align: center;
+}
+
 .tabs {
   display: flex;
   justify-content: center;
-  margin: 20px;
+  gap: 20px;
+  margin: 30px 0;
 }
 
 .tab {
   padding: 10px 20px;
   cursor: pointer;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  background: white;
 }
 
 .tab.active {
@@ -82,10 +111,16 @@
   color: white;
 }
 
+.cardui {
+  display: flex;
+  flex-direction: column;
+}
+
+/* card grid*/
 .tab-content {
   display: none;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 24px;
   padding: 30px;
 }
 
@@ -93,29 +128,65 @@
   display: grid;
 }
 
+/* card design */
 .card {
-  padding: 20px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  border-radius: 12px;
+  background: white;
+  padding: 30px;
+  border-radius: 16px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+  transition: 0.3s;
 }
 
-/* SLIDER */
+.card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 15px 30px rgba(0,0,0,0.15);
+}
+
+.icon {
+  font-size: 32px;
+  margin-bottom: 10px;
+}
+
+.card h3 {
+  margin-bottom: 8px;
+}
+
+
+/* testimonal */
+
+.testimonial-section {
+  margin-bottom: 20px;
+    text-align: center;
+}
+
 .slider {
   position: relative;
   width: 60%;
   margin: auto;
+  padding-top: 10px;
+  
+  
 }
 
 .slide {
   display: none;
+  
   text-align: center;
+  
+  flex-direction: column;
+  gap: 20px;
 }
 
 .slide.active {
-  display: block;
+   display: flex;
 }
-
-/* FAQ */
+.prev,
+.next {
+  margin-top: 10px;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+/* faq */
 .faq {
   width: 60%;
   margin: 10px auto;
@@ -126,16 +197,22 @@
   padding: 10px;
 }
 
-/* FORM */
+/* form */
+.form-section{
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  gap: 20px;
+}
 .form-section form {
   width: 40%;
   margin: auto;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 
-/* FOOTER */
+/* footer*/
 .footer {
   display: flex;
   justify-content: space-around;
