--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
 }
 
 /* navbar */
+.logo{
+  font-size: 24px;
+  font-weight: bold;
+  padding: auto;
+
+}
+.logo b{
+  color: rgb(255, 0, 0);
+}
 .navbar {
   position: sticky;
   top: 0;
@@ -56,7 +65,7 @@
 
 /* buttons */
 .btn-primary {
-  background: #ff7a00;
+  background: #239be0;
   color: white;
   border: none;
   padding: 10px 15px;
@@ -64,7 +73,7 @@
 }
 
 .btn-outline {
-  border: 1px solid #ff7a00;
+  border: 1px solid #239be0;
   background: transparent;
   padding: 10px 15px;
   border-radius: 8px;
@@ -107,7 +116,7 @@
 }
 
 .tab.active {
-  background: #ff7a00;
+  background: #239be0;
   color: white;
 }
 
@@ -157,12 +166,11 @@
 .testimonial-section {
   margin-bottom: 20px;
     text-align: center;
+    align-items: center;
 }
 
 .slider {
   position: relative;
-  width: 60%;
-  margin: auto;
   padding-top: 10px;
   
   
@@ -172,13 +180,14 @@
   display: none;
   
   text-align: center;
-  
+  align-items: center;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 
 .slide.active {
    display: flex;
+  
 }
 .prev,
 .next {
@@ -186,8 +195,25 @@
   margin-left: 8px;
   margin-right: 8px;
 }
+ .cardreview {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  background: white;
+  padding: 20px;
+  border-radius: 16px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+  /* transition: 0.3s; */
+  width: 50%;
+}
 /* faq */
+.faq-section h2{
+  text-align: center;
+  margin-top: 20px;
+  /* margin-bottom: 20px; */
+}
 .faq {
+  text-align: center;
   width: 60%;
   margin: 10px auto;
 }
@@ -198,7 +224,7 @@
 }
 
 /* form */
-.form-section{
+.form-section h2{
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -206,10 +232,26 @@
 }
 .form-section form {
   width: 40%;
-  margin: auto;
-  display: flex;
+  border: 0;
+    outline: none;
+    background: #e0d4ca;
+    padding: 35px;
+    margin: 25px auto;
+    color: #232120;
+    font-size: 18px;
+    border-radius: 6px;
+    display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+/* buttons */
+.btn-primary2 {
+  background: #1a1919;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 8px;
 }
 
 /* footer*/
